# aprosys

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aprosys/: manage.py
aprosys/aprosys/: asgi.py  settings.py  urls.py  wsgi.py
aprosys/aprosys/static/css/: forms.css  home.css  registration.css  search_tables.css  style.css  widgets.css
aprosys/aprosys/templates/: logged_base.html  registration_base.html
aprosys/aprosys/templates/academico/: home.html
aprosys/aprosys/templates/academico/alunos/: aluno_form.html  aluno_form_fields.html  editar_aluno.html  matricular_aluno.html  pesquisar_aluno.html
aprosys/aprosys/templates/academico/cursos/: cadastrar_curso.html  pesquisar_curso.html
aprosys/aprosys/templates/academico/periodos/: cadastrar_periodo.html  (+1 more)
aprosys/aprosys/templates/includes/: footer.html  menu.html  navbar.html  sidebar.html
aprosys/aprosys/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  user_registration.html
aprosys/aprosys/templates/widgets/: related_field_wrapper.html
aprosys/modules/academico/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  widgets.py
aprosys/modules/academico/migrations/: 0001_initial.py  0002_alter_aluno_curso_interesse.py  0002_curso_disciplina_periodoletivo_aluno_turma_and_more.py  0003_turma_curso.py  0004_auto_20250920_1107.py  0005_alter_aluno_periodo_interesse.py  0006_remove_aluno_curso_interesse_aluno_curso_interesse.py
(+6 files in other folders)
